--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,8 +17,10 @@
         "group": {
             "kind": "build",
             "isDefault": true
-        }   
+        },
+        "options": {
+          "cwd": "${workspaceFolder}/bpm"
+        }
       }
-  
     ]
   }
