adding necessary scopes to create playlists for users

--- a/bpm/auth_config.json
+++ b/bpm/auth_config.json
@@ -1,5 +1,10 @@
 {
     "clientId": "6aa77145c4a04913aa3e7084dba97018",
     "scopes": 
-    ["user-read-private", "user-read-email"]
+    [
+        "user-read-private", 
+        "user-read-email",
+        "playlist-modify-public",
+        "playlist-modify-private" 
+    ]
 }
