--- a/bpm/auth_config.json
+++ b/bpm/auth_config.json
@@ -5,6 +5,7 @@
         "user-read-private", 
         "user-read-email",
         "playlist-modify-public",
-        "playlist-modify-private" 
+        "playlist-modify-private",
+        "streaming" 
     ]
 }
