--- a/bpm/package.json
+++ b/bpm/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-service": "~5.0.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "vue-svg-loader": "^0.17.0-beta.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
