--- a/bpm/package.json
+++ b/bpm/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.6.14",
+    "vue-round-slider": "^1.0.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
