--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,26 +1,57 @@
 {
-    "version": "2.0.0",
-    "tasks": [
+  "version": "2.0.0",
+  "tasks": [
       {
-        "label": "serve",
-        "type": "npm",
-        "script": "serve",
-        "isBackground": true,
-        "problemMatcher": [{
-            "base": "$tsc-watch",
-            "background": {
-                "activeOnStart": true,
-                "beginsPattern": "Starting development server",
-                "endsPattern": "Compiled successfully"
-            }
-        }],
-        "group": {
-            "kind": "build",
-            "isDefault": true
-        },
-        "options": {
-          "cwd": "${workspaceFolder}/bpm"
-        }
+          "label": "serve",
+          "type": "npm",
+          "script": "serve",
+          "options": {
+              "cwd": "${workspaceFolder}/bpm"
+          },
+          "isBackground": true,
+          "problemMatcher": [{
+              "pattern": [{
+                  "regexp": ".",
+                  "file": 1,
+                  "location": 2,
+                  "message": 3
+              }],
+              "background": {
+                  "activeOnStart": true,
+                  "beginsPattern": "Starting development server",
+                  "endsPattern": "App running at:"
+              }
+          }],
+          "group": {
+              "kind": "build",
+              "isDefault": true
+          }
       }
-    ]
-  }
+  ]
+}
+// {
+//     "version": "2.0.0",
+//     "tasks": [
+//       {
+//         "label": "serve",
+//         "type": "npm",
+//         "script": "serve",
+//         "isBackground": true,
+//         "problemMatcher": [{
+//             "base": "$tsc-watch",
+//             "background": {
+//                 "activeOnStart": true,
+//                 "beginsPattern": "Starting development server",
+//                 "endsPattern": "Compiled successfully"
+//             }
+//         }],
+//         "group": {
+//             "kind": "build",
+//             "isDefault": true
+//         },
+//         "options": {
+//           "cwd": "${workspaceFolder}/bpm"
+//         }
+//       }
+//     ]
+//   }
